--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -4,7 +4,7 @@ monolog:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
-            channels: ["!event"]
+            channels: ["!event", "!fbclient"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
@@ -17,3 +17,9 @@ monolog:
             type:   console
             process_psr_3_messages: false
             channels: ["!event", "!doctrine", "!console"]
+        fbclient:
+            type:     stream
+            path:     "%kernel.logs_dir%/fbclient.log"
+            level:    debug
+            channels: [fbclient]
+    channels: ["fbclient"]
