--- a/.env.dist
+++ b/.env.dist
@@ -6,6 +6,7 @@
 APP_ENV=dev
 APP_ID=1234567890
 APP_SECRET=ThisTokenIsNotSoSecretChangeIt
+APP_TOKEN=ThisTokenIsNotSoSecretChangeIt
 API_VERSION=2.12
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
