Cacheo de excepciones

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,20 +1,20 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
     
     # facebook sdk
     app_id: '%env(APP_ID)%'
     app_secret: '%env(APP_SECRET)%'
     app_token: '%env(APP_TOKEN)%'
     api_version: '%env(API_VERSION)%'
+    locale: 'en'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        public: false       # Allows optimizing the container by removing unused services; this also means
+        public: true       # Allows optimizing the container by removing unused services; this also means
                             # fetching services directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
 
@@ -32,3 +32,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    #custom exception listener
+    client_controller.listener:
+        class: App\EventListener\ClientControllerExceptionListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
