Logger para cada entorno

--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -5,3 +5,9 @@ monolog:
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
             channels: ["!event"]
+        fbclient:
+            type:     stream
+            path:     "%kernel.logs_dir%/fbclient_%kernel.environment%.log"
+            level:    debug
+            channels: [fbclient]
+    channels: ["fbclient"]
