--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -19,7 +19,7 @@ monolog:
             channels: ["!event", "!doctrine", "!console"]
         fbclient:
             type:     stream
-            path:     "%kernel.logs_dir%/fbclient.log"
+            path:     "%kernel.logs_dir%/fbclient_%kernel.environment%.log"
             level:    debug
             channels: [fbclient]
     channels: ["fbclient"]
