--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -15,3 +15,9 @@ monolog:
             type:   console
             process_psr_3_messages: false
             channels: ["!event", "!doctrine"]
+        fbclient:
+            type:     stream
+            path:     "%kernel.logs_dir%/fbclient.log"
+            level:    debug
+            channels: [fbclient]
+    channels: ["fbclient"]
